# schedule_manager

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start_calendar_server.sh
app/: main.py
app/calendar/: client.py  parser.py  sync.py
app/core/: config.py  database.py  scheduler.py
app/models/: __init__.py  attendee.py  confirmation.py  event.py  item.py  oauth.py  sync_state.py
app/routes/: auth.py  events.py  items.py  sync.py
app/templates/: archive.html  base.html  event_detail.html  events.html
docs/: ARCHITECTURE.md
scripts/: get_token.py  push_to_master_events.py
tests/: conftest.py  test_models.py  test_parser.py  test_routes.py  test_sync.py
